[gd_scene load_steps=13 format=3 uid="uid://bqmerbh0i6esf"]

[ext_resource type="Script" path="res://Instanced Scenes/Area.gd" id="1_xvckl"]
[ext_resource type="Script" path="res://Spell Effects/Damage_Effect.gd" id="2_7fyam"]
[ext_resource type="Script" path="res://Spell Effects/Testing Related/Animation_Effect.gd" id="3_8kbud"]
[ext_resource type="Script" path="res://addons/godot-rollback-netcode/NetworkTimer.gd" id="3_hv6g0"]
[ext_resource type="Texture2D" uid="uid://bpuuphtu8esyh" path="res://Spell Effects/Spells/Showcase Spells/Fireball/Fire-Sheet.png" id="4_3p2po"]
[ext_resource type="Script" path="res://addons/godot-rollback-netcode/NetworkAnimationPlayer.gd" id="6_diqbj"]

[sub_resource type="Resource" id="Resource_tjmld"]
script = ExtResource("2_7fyam")
damage_value = 10

[sub_resource type="Resource" id="Resource_7mdpn"]
script = ExtResource("3_8kbud")
animation_name = "flame"

[sub_resource type="SGRectangleShape2D" id="SGRectangleShape2D_u01od"]
extents_x = 1038778
extents_y = 1101672

[sub_resource type="Animation" id="Animation_xa458"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_1mxs5"]
resource_name = "fire"
length = 0.4
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gk8ly"]
_data = {
"RESET": SubResource("Animation_xa458"),
"flame": SubResource("Animation_1mxs5")
}

[node name="Fire" type="SGArea2D" groups=["network_sync", "pierceable"]]
script = ExtResource("1_xvckl")
timings = Array[int]([3, 4])
locations = Array[int]([2, 3])
effects = Array[Resource("res://Spell Effects/Parent Effects/Spell Effect.gd")]([SubResource("Resource_tjmld"), SubResource("Resource_7mdpn")])
ping_time = 5
life_time = 30

[node name="CollisionShape2D" type="SGCollisionShape2D" parent="."]
shape = SubResource("SGRectangleShape2D_u01od")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("4_3p2po")
hframes = 2

[node name="End_Time" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_hv6g0")
wait_ticks = 60

[node name="Ping_Time" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_hv6g0")
wait_ticks = 60

[node name="NetworkAnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_gk8ly")
}
script = ExtResource("6_diqbj")

[connection signal="timeout" from="End_Time" to="." method="_on_end_time_timeout"]
[connection signal="timeout" from="Ping_Time" to="." method="_on_ping_time_timeout"]
